--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>com.jcraft</groupId>
+    <artifactId>jsch</artifactId>
+    <version>0.1.55</version>
+</dependency>
+<dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>fastjson</artifactId>
+    <version>1.2.83</version>
+</dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -95,6 +110,13 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
+                    <image>
+                        <!-- 可选：国内 builder 镜像 -->
+                        <builder>registry.cn-hangzhou.aliyuncs.com/acs/paketo-buildpacks-builder:base</builder>
+                    </image>
                 </configuration>
             </plugin>
             <plugin>
