--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.18</version> <relativePath/> </parent>
     <groupId>net.thekingofduck</groupId>
-    <artifactId>loki</artifactId>
+    <artifactId>NingAn</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>loki</name>
     <description>Honeypot project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -115,7 +115,8 @@
                     </layers>
                     <image>
                         <!-- 可选：国内 builder 镜像 -->
-                        <builder>registry.cn-hangzhou.aliyuncs.com/acs/paketo-buildpacks-builder:base</builder>
+                        <!-- 注释掉可能失效的镜像地址 -->
+                        <!-- <builder>registry.cn-hangzhou.aliyuncs.com/acs/paketo-buildpacks-builder:base</builder> -->
                     </image>
                 </configuration>
             </plugin>
